feat: add logger and remove sonarqube errors